--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="imgs/aboutme.PNG" alt="about image">
+                <img src="imgs/aboutme.png" alt="about image">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
