--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <ul>
                             <li><span>CYB 134</span><br>Introduction to Cybersecurity</li>
                             <li><span>CYB 234</span><br>System Administration and Scripting (Linux/BASH)</li>
-                            <li><span>CSE 235 (In Progress)</span><br>Computer Networks</li>
+                            <li><span>CYB 235 (In Progress)</span><br>Computer Networks</li>
                             <li><span>CSE 174</span><br>Fundamentals of Programming and Problem Solving (Java)</li>
                             <li><span>CSE 201</span><br>Intro to Software Engineering (C++)</li>
                             <li><span>CSE 271</span><br>Object-Oriented Programming (Java)</li>
