--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <nav>
             <img src="imgs/logo.png" alt="logo" class="logo">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#header">Home</a></li>
+                <li><a href="#about">About</a></li>
                 <!-- <li><a href="#">Portfolio</a></li> -->
-                <li><a href="#">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <div class="header-text">
@@ -84,6 +84,19 @@
                             <li><span>THM Introduction to Cybersecurity Certification (2023)</span><br>Completed the TryHackMe Introduction to Cybersecurity online certification.</li>
                         </ul>
                     </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--contact-->
+<div id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title">Contact Me</h1>
+                <p><i class="fa-solid fa-envelope"></i>rangans2@miamioh.edu</p>
+                <p><i class="fa-solid fa-phone"></i>203-570-8686</p>
             </div>
         </div>
     </div>
